--- a/src/main/webapp/admin/upravljanjeDogadajima.xhtml
+++ b/src/main/webapp/admin/upravljanjeDogadajima.xhtml
@@ -7,6 +7,9 @@
       xmlns:p="http://primefaces.org/ui"
       xml:lang="en" lang="en">
 
+
+<!--<h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>-->
+
 <h:head>
 </h:head>
 
@@ -22,51 +25,192 @@
             <h:panelGrid id="panelGridInputForm" columns="2">
                 <p:outputLabel for="sifraDogadajaInput" value="Šifra događaja:   "/>
                 <p:inputText id="sifraDogadajaInput"
-
+                             value="#{dogadajiController.dogadajDto.sifraDogadaja}"
                              readonly="true" disabled="true"/>
                 <p:outputLabel for="nazivDogadaja" value="Naziv događaja:   "/>
                 <p:inputTextarea id="nazivDogadaja"
-
+                                 value="#{dogadajiController.dogadajDto.nazivDogadaja}" rows="3"
                                  cols="40"
                                  maxlength="250" autoResize="false" required="false"
                                  requiredMessage="Naziv događaja je obavezan podatak!"/>
 
                 <p:outputLabel for="grad" value="Grad:   "/>
                 <p:selectOneMenu id="grad"
-
+                                 value="#{dogadajiController.dogadajDto.gradDogadajaDto.sifraGrada}"
                                  filter="true"
                                  filterMatchMode="startsWith" style="width:250px" required="false"
                                  requiredMessage="Grad je obavezan podatak!">
-<!--                    <f:selectItems value="#{dogadajiController.gradSelectItems}"/>-->
+                    <f:selectItems value="#{dogadajiController.gradSelectItems}"/>
                 </p:selectOneMenu>
 
                 <p:outputLabel for="vrijemeOd" value="Vrijeme od   :"/>
                 <p:calendar id="vrijemeOd"
-
+                            value="#{dogadajiController.dogadajDto.vrijemeOd}" locale="de"
                             pattern="dd.MM.yyyy HH:mm">
                     <f:converter converterId="LocalDateConverter"/>
                 </p:calendar>
 
                 <p:outputLabel for="vrijemeDo" value="Vrijeme do   :"/>
                 <p:calendar id="vrijemeDo"
-
+                            value="#{dogadajiController.dogadajDto.vrijemeDo}" locale="de"
                             pattern="dd.MM.yyyy HH:mm">
                     <f:converter converterId="LocalDateConverter"/>
                 </p:calendar>
 
                 <h:outputText value="Slobodan ulaz: "/>
                 <p:selectBooleanButton id="value1"
-
+                                       value="#{dogadajiController.dogadajDto.slobodanUlaz}"
                                        onLabel="Da"
                                        offLabel="Ne"
                                        style="width:60px"/>
                 <p:commandButton value="Novi" actionListener="#{dogadajiController.resetDto}" id="novizapis"
                                  style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
-                                 update="panelGridInputForm, j_idt5:filterAdvanced" icon="pi pi-replay"/>
+                                 update="panelGridInputForm, filterAdvanced" icon="pi pi-replay"/>
                 <p:commandButton value="Spremi" actionListener="#{dogadajiController.save}" id="spremi"
                                  style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
-                                 update="panel_unos, j_idt5:filterAdvanced" icon="pi pi-save"/>
+                                 update="panel_unos, filterAdvanced" icon="pi pi-save"/>
 
+            </h:panelGrid>
+        </p:panel>
+
+        <p:panel id="panel_filter2" header="Pretraga događaja" style="margin-bottom:5px" toggleable="true"
+                 toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
+
+            <h:panelGrid columns="2" id="inputFormPanelGrid">
+                <h:panelGrid columns="2" >
+                    <p:outputLabel for="nazivDogadaja" value="Naziv događaja:   "/>
+                    <p:inputTextarea id="nazivDogadajaFilter"
+                                     value="#{dogadajiController.dogadajFilterDto.nazivDogadaja}"
+                                     rows="3" cols="40"
+                                     maxlength="250" autoResize="false" required="false"/>
+
+                    <p:outputLabel for="vrijemeOdPocetakFilter" value="Vrijeme od (početak)  :"/>
+                    <p:calendar id="vrijemeOdPocetakFilter"
+                                value="#{dogadajiController.dogadajFilterDto.vrijemeOdPocetak}"
+                                locale="de" pattern="dd.MM.yyyy HH:mm">
+                        <f:converter converterId="LocalDateConverter"/>
+                    </p:calendar>
+                    <p:outputLabel for="vrijemeDoPocetakFilter" value="Vrijeme do (početak)  :"/>
+                    <p:calendar id="vrijemeDoPocetakFilter"
+                                value="#{dogadajiController.dogadajFilterDto.vrijemeDoPocetak}"
+                                locale="de" pattern="dd.MM.yyyy HH:mm">
+                        <f:converter converterId="LocalDateConverter"/>
+                    </p:calendar>
+                    <p:outputLabel for="vrijemeOdKrajFilter" value="Vrijeme od (kraj)  :"/>
+                    <p:calendar id="vrijemeOdKrajFilter" value="#{dogadajiController.dogadajFilterDto.vrijemeOdKraj}"
+                                locale="de" pattern="dd.MM.yyyy HH:mm">
+                        <f:converter converterId="LocalDateConverter"/>
+                    </p:calendar>
+                    <p:outputLabel for="vrijemeDoKrajFilter" value="Vrijeme do (početak)  :"/>
+                    <p:calendar id="vrijemeDoKrajFilter" value="#{dogadajiController.dogadajFilterDto.vrijemeDoKraj}"
+                                locale="de" pattern="dd.MM.yyyy HH:mm">
+                        <f:converter converterId="LocalDateConverter"/>
+                    </p:calendar>
+                    <p:outputLabel for="ulazSlobodanFilter" value="Ulaz slobodan:   "/>
+                    <p:selectOneMenu id="ulazSlobodanFilter" value="#{dogadajiController.dogadajFilterDto.slobodanUlaz}"
+                                     filter="false" style="width:100px">
+                        <f:selectItems value="#{dogadajiController.slobodanUlazFilterSelectItems}"/>
+                    </p:selectOneMenu>
+                </h:panelGrid>
+                <h:panelGrid columns="2">
+                    <h:outputLabel for="sifraFilter" value="Šifra događaja:"/>
+                    <p:inputText id="sifraFilter" value="#{dogadajiController.dogadajFilterDto.sifraDogadaja}" />
+
+                    <h:outputLabel for="regijaFilter" value="Regija:"/>
+                    <p:selectCheckboxMenu id="regijaFilter"
+                                          value="#{dogadajiController.dogadajFilterDto.odabraneRegije}"
+                                          label="Regija" multiple="true"
+                                          filter="false" panelStyle="width:250px">
+                        <f:selectItems value="#{dogadajiController.regijaFilterSelectItems}"/>
+                        <p:ajax update="zupanijaFilter, gradFilter"/>
+                    </p:selectCheckboxMenu>
+
+                    <h:outputLabel for="zupanijaFilter" value="Županija:"/>
+                    <p:selectCheckboxMenu id="zupanijaFilter"
+                                          value="#{dogadajiController.dogadajFilterDto.odabraneZupanije}"
+                                          label="Županija"
+                                          multiple="true"
+                                          filter="true" filterMatchMode="startsWith" panelStyle="width:250px">
+                        <f:selectItems
+                                value="#{dogadajiController.getZupanija(dogadajiController.dogadajFilterDto.odabraneRegije)}"/>
+                        <p:ajax update="gradFilter"/>
+                    </p:selectCheckboxMenu>
+
+
+                    <h:outputLabel for="velicinaGradaFilter" value="Veličina grada:"/>
+                    <p:selectCheckboxMenu id="velicinaGradaFilter"
+                                          value="#{dogadajiController.dogadajFilterDto.odabraneVelicineGrada}"
+                                          label="Veličine grada" multiple="true"
+                                          panelStyle="width:250px">
+                        <f:selectItems value="#{dogadajiController.velicinaGradaFilterSelectItems}"/>
+                        <p:ajax update="gradFilter"/>
+                    </p:selectCheckboxMenu>
+
+                    <h:outputLabel for="gradFilter" value="Grad:"/>
+                    <p:selectCheckboxMenu id="gradFilter" value="#{dogadajiController.dogadajFilterDto.odabraniGradovi}"
+                                          label="Grad" multiple="true"
+                                          filter="true" filterMatchMode="startsWith" panelStyle="width:250px">
+                        <f:selectItems
+                                value="#{dogadajiController.getGrad(dogadajiController.dogadajFilterDto.odabraneRegije, dogadajiController.dogadajFilterDto.odabraneZupanije, dogadajiController.dogadajFilterDto.odabraneVelicineGrada)}"/>
+                    </p:selectCheckboxMenu>
+                    <p:commandButton value="Poništi filter" actionListener="#{dogadajiController.resetFilterDto}"
+                                     id="filterreset" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
+                                     ajax="true"
+                                     update="panel_filter2" icon="pi pi-replay"/>
+                    <p:commandButton value="Pretraži" actionListener="#{dogadajiController.getFilterListDogadaj}"
+                                     id="filter" style="margin-right:20px;margin-top:10px;margin-bottom: 10px"
+                                     ajax="true" update="filterAdvanced"
+                                     icon="pi pi-search"/>
+                </h:panelGrid>
+            </h:panelGrid>
+            <h:panelGrid columns="2">
+                <p:dataTable id="filterAdvanced" var="filterDogadajDto"
+                             rows="10"
+                             paginator="true"
+                             paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
+                             rowsPerPageTemplate="5,10,15"
+                             value="#{dogadajiController.dogadajiFilterList}"
+                             selectionMode="single"
+                             rowKey="#{filterDogadajDto.sifraDogadaja}"
+                             emptyMessage="Nije pronađen niti jedan događaj">
+                    <f:facet name="header">
+                        Rezultati pretrage
+                    </f:facet>
+                    <p:ajax event="rowSelect" listener="#{dogadajiController.onTableRowSelect}" update="j_idt5:panel_unos"/>
+                    <p:column headerText="Šifra">
+                        <h:outputText value="#{filterDogadajDto.sifraDogadaja}"/>
+                    </p:column>
+                    <p:column headerText="Naziv">
+                        <h:outputText value="#{filterDogadajDto.nazivDogadaja}"/>
+                    </p:column>
+                    <p:column headerText="Vrijeme od">
+                        <h:outputText value="#{filterDogadajDto.vrijemeOd}">
+                            <f:converter converterId="LocalDateConverter"/>
+                        </h:outputText>
+                    </p:column>
+                    <p:column headerText="Vrijeme do">
+                        <h:outputText value="#{filterDogadajDto.vrijemeDo}">
+                            <f:converter converterId="LocalDateConverter"/>
+                        </h:outputText> </p:column>
+                    <p:column headerText="Ulaz slobodan">
+                        <h:outputText value="#{filterDogadajDto.slobodanUlaz}"/>
+                    </p:column>
+                    <p:column headerText="Grad">
+                        <h:outputText value="#{filterDogadajDto.gradDogadajaDto.nazivGrada}"/>
+                    </p:column>
+                    <p:column headerText="Veličina grada">
+                        <h:outputText value="#{filterDogadajDto.gradDogadajaDto.velicinaGradaDto.nazivVelicineGrada}"/>
+                    </p:column>
+                    <p:column headerText="Županija">
+                        <h:outputText
+                                value="#{filterDogadajDto.gradDogadajaDto.organizacijskaJedinicaDto.nazivOrgJedinice}"/>
+                    </p:column>
+                    <p:column headerText="Regija">
+                        <h:outputText
+                                value="#{filterDogadajDto.gradDogadajaDto.organizacijskaJedinicaDto.nadredenaOrganizacijeDto.nazivOrgJedinice}"/>
+                    </p:column>
+                </p:dataTable>
             </h:panelGrid>
         </p:panel>
 
