--- a/src/main/webapp/guest/pregledDogadaja.xhtml
+++ b/src/main/webapp/guest/pregledDogadaja.xhtml
@@ -57,29 +57,32 @@
                             update="messages"/>
                 </p:schedule>
 
-                <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="fade" hideEffect="fade">
+                <p:dialog widgetVar="eventDialog" header="Detalji događaja" showEffect="fade" hideEffect="fade">
                     <h:panelGrid id="eventDetails" columns="2" cellpadding="7">
-                        <p:outputLabel for="title" value="Titles" styleClass="p-text-bold"/>
-                        <p:inputText id="title" value="#{pregledDogadajaController.event.title}" required="true"/>
+                        <p:outputLabel for="title" value="Naziv" styleClass="p-text-bold"/>
+                        <p:inputText id="title" value="#{pregledDogadajaController.event.title}" required="true" disabled="true"/>
 
-                        <p:outputLabel for="from" value="From" styleClass="p-text-bold"/>
+                        <p:outputLabel for="from" value="Od" styleClass="p-text-bold"/>
                         <p:datePicker id="from" value="#{pregledDogadajaController.event.startDate}"
                                       pattern="dd/MM/yyyy"
-                                      showTime="true" appendTo="@(body)"/>
+                                      showTime="true" appendTo="@(body)"
+                                      disabled="true"/>
 
-                        <p:outputLabel for="to" value="To" styleClass="p-text-bold"/>
+                        <p:outputLabel for="to" value="Do" styleClass="p-text-bold"/>
                         <p:datePicker id="to" value="#{pregledDogadajaController.event.endDate}" pattern="dd/MM/yyyy"
-                                      showTime="true" appendTo="@(body)"/>
+                                      showTime="true" appendTo="@(body)"
+                                      disabled="true"
+                        />
 
-                        <p:outputLabel for="allDay" value="All Day" styleClass="p-text-bold"/>
-                        <h:selectBooleanCheckbox id="allDay" value="#{pregledDogadajaController.event.allDay}"/>
+                        <p:outputLabel for="description" value="Detalji" styleClass="p-text-bold"/>
+                        <p:inputTextarea id="description" value="#{pregledDogadajaController.event.description}" disabled="true"/>
                     </h:panelGrid>
 
-                    <div class="p-d-flex p-jc-between p-mt-3">
-                        <p:commandButton type="reset" value="Reset" styleClass="p-text-bold ui-button-outlined"/>
-                        <p:commandButton id="addButton" value="Save" action="#{pregledDogadajaController.addEvent}"
-                                         oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
-                    </div>
+<!--                    <div class="p-d-flex p-jc-between p-mt-3">-->
+<!--                        <p:commandButton type="reset" value="Reset" styleClass="p-text-bold ui-button-outlined"/>-->
+<!--                        <p:commandButton id="addButton" value="Save" action="#{pregledDogadajaController.addEvent}"-->
+<!--                                         oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>-->
+<!--                    </div>-->
                 </p:dialog>
 
         </p:panel>
