pregled svih dogadaja

--- a/src/main/webapp/guest/pregledDogadaja.xhtml
+++ b/src/main/webapp/guest/pregledDogadaja.xhtml
@@ -74,7 +74,7 @@
                                       disabled="true"
                         />
 
-                        <p:outputLabel for="description" value="Detalji" styleClass="p-text-bold"/>
+                        <p:outputLabel for="description" value="Mjesto održavanja:" styleClass="p-text-bold"/>
                         <p:inputTextarea id="description" value="#{pregledDogadajaController.event.description}" disabled="true"/>
                     </h:panelGrid>
 
