--- a/src/main/webapp/admin/upravljanjeDogadajima.xhtml
+++ b/src/main/webapp/admin/upravljanjeDogadajima.xhtml
@@ -78,7 +78,7 @@
 
             <h:panelGrid columns="2" id="inputFormPanelGrid">
                 <h:panelGrid columns="2" >
-                    <p:outputLabel for="nazivDogadaja" value="Naziv događaja:   "/>
+                    <p:outputLabel for="nazivDogadajaFilter" value="Naziv događaja:   "/>
                     <p:inputTextarea id="nazivDogadajaFilter"
                                      value="#{dogadajiController.dogadajFilterDto.nazivDogadaja}"
                                      rows="3" cols="40"
