--- a/src/main/webapp/secured/admin/upravljanjeDogadajima.xhtml
+++ b/src/main/webapp/secured/admin/upravljanjeDogadajima.xhtml
@@ -21,6 +21,10 @@
             <p:menuitem value="Pretraga" icon="pi pi-fw pi-filter"
                         url="http://localhost:9080/online-events/guest/pretragaDogadaja.xhtml"/>
             <f:facet name="options">
+                  <span class="ui-input-icon-left">
+                    <i class="pi pi-user pi-user" />
+                    <p:inputText value="#{request.remoteUser}" readonly="true"/>
+                </span>
                 <input type="hidden" name="logoutExitPage" value="/welcome.xhtml"/>
                 <p:button value="Logout" icon="pi pi-fw pi-sign-out" styleClass="ui-button-info"
                           onclick="document.getElementById('logout').submit()"/>
